BusOne/src/objects/User_Detail_vod__c.object
<CustomObject>
    <description>This object holds the basic information about the Users like contact information, profile photo etc.</description>
    <fields>
        <fullName>Home_Address_Line_1_vod__c</fullName>
        <description>Address line 1 of the user&apos;s home address</description>
        <inlineHelpText>Address line 1 of the user&apos;s home address</inlineHelpText>
        <label>Home Address Line 1</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_Address_Line_2_vod__c</fullName>
        <description>Address line 2 of the user&apos;s home address</description>
        <inlineHelpText>Address line 2 of the user&apos;s home address</inlineHelpText>
        <label>Home Address Line 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_City_vod__c</fullName>
        <description>City of the user&apos;s home address</description>
        <inlineHelpText>City of the user&apos;s home address</inlineHelpText>
        <label>Home City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_Country_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Country of the user&apos;s home address</description>
        <inlineHelpText>Country of the user&apos;s home address</inlineHelpText>
        <label>Home Country</label>
        <referenceTo>Country_vod__c</referenceTo>
        <relationshipLabel>Countries</relationshipLabel>
        <relationshipName>Home_Country_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Home_State_vod__c</fullName>
        <description>State of the user&apos;s home address</description>
        <inlineHelpText>State of the user&apos;s home address</inlineHelpText>
        <label>Home State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AS</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>FM</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>GU</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MH</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Home_Zip_4_vod__c</fullName>
        <description>ZIP + 4 of the user&apos;s home address</description>
        <inlineHelpText>ZIP + 4 of the user&apos;s home address</inlineHelpText>
        <label>Home Zip+4</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_Zip_vod__c</fullName>
        <description>Zip of the user&apos;s home address</description>
        <inlineHelpText>Zip of the user&apos;s home address</inlineHelpText>
        <label>Home Zip</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_ID_vod__c</fullName>
        <description>System field used by mobile products to aid synchronization.</description>
        <externalId>true</externalId>
        <label>Mobile ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Photo_vod__c</fullName>
        <description>Base64 encoded User&apos;s photo, uploaded from the User Detail tab.</description>
        <label>Photo</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Remote_Meeting_Name_vod__c</fullName>
        <description>Used as the default Meeting Topic text for Remote Meetings</description>
        <label>Remote Meeting Display Name</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>User_Signature_vod__c</fullName>
        <description>Stores user&apos;s signature.</description>
        <label>User Signature</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>User_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the User record in SFDC</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>User_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>User Detail</label>
    <nameField>
        <displayFormat>UD-{000000}</displayFormat>
        <label>User Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Details</pluralLabel>
    <recordTypes>
        <fullName>User_DetailUser_Detail_vod_vod</fullName>
        <active>true</active>
        <description>Record type for User_Detail_vod records that hold the basic contact information and photo for a User</description>
        <label>User_Detail_vod</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>